[package]
name = "finitediff"
version = "0.1.2"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Finite/numerical differentiation"
documentation = "https://docs.rs/finitediff/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/finitediff"
readme = "README.md"
keywords = ["differentiation", "optimization", "math", "science"]
categories = ["science"]
exclude = [ 
	".travis.yml",
	"push_docs",
]

[dependencies]
ndarray = { version = "0.13.0", optional = true }

[badges]
travis-ci = { repository = "argmin-rs/finitediff", branch = "master" }
maintenance = { status = "passively-maintained" }
